RESOLVED FIXED177542
AX: [ATK] object:state-changed notifications missing for multiple ARIA attributes
https://bugs.webkit.org/show_bug.cgi?id=177542
Summary AX: [ATK] object:state-changed notifications missing for multiple ARIA attrib...
Joanmarie Diggs
Reported 2017-09-27 08:47:00 PDT
When the following ARIA attributes have value changes, an object:state-changed notification is expected but currently not emitted: * aria-disabled * aria-expanded * aria-pressed * aria-readonly * aria-required
Attachments
Patch (22.64 KB, patch)
2017-09-27 11:43 PDT, Joanmarie Diggs
no flags
Patch (22.68 KB, patch)
2017-09-28 15:42 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-27 08:47:27 PDT
Joanmarie Diggs
Comment 2 2017-09-27 11:43:41 PDT
Joanmarie Diggs
Comment 3 2017-09-27 13:58:13 PDT
Comment on attachment 321985 [details] Patch Chris: Please review. Thanks!
chris fleizach
Comment 4 2017-09-28 15:03:24 PDT
Comment on attachment 321985 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=321985&action=review > Source/WebCore/accessibility/AXObjectCache.h:288 > + AXPressedChanged, Can we call this PressedState (it seems similar to DisabledState) > Source/WebCore/accessibility/AXObjectCache.h:289 > + AXReadOnlyChanged, ReadOnlyStatus > Source/WebCore/accessibility/AXObjectCache.h:290 > + AXRequiredChanged, RequiredStatus
Joanmarie Diggs
Comment 5 2017-09-28 15:42:45 PDT
WebKit Commit Bot
Comment 6 2017-09-28 17:13:17 PDT
Comment on attachment 322130 [details] Patch Clearing flags on attachment: 322130 Committed r222640: <http://trac.webkit.org/changeset/222640>
WebKit Commit Bot
Comment 7 2017-09-28 17:13:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.