AX: [ATK] object:state-changed notifications missing for multiple ARIA attributes https://bugs.webkit.org/show_bug.cgi?id=177542

Source/WebCore:

Add new notification types to AXObjectCache in order to support the notifications
needed, post the notifications to all platforms, emit the signals for ATK.

Reviewed by Chris Fleizach.

Tests: accessibility/gtk/aria-disabled-changed-notification.html
       accessibility/gtk/aria-expanded-changed-notification.html
       accessibility/gtk/aria-pressed-changed-notification.html
       accessibility/gtk/aria-readonly-changed-notification.html
       accessibility/gtk/aria-required-changed-notification.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChanged):
* accessibility/AXObjectCache.h:
* accessibility/atk/AXObjectCacheAtk.cpp:
(WebCore::AXObjectCache::postPlatformNotification):

Tools:

Add platform support for the notifications. Also add support for getting the
boolean argument indicating whether the state has been set or unset.

Reviewed by Chris Fleizach.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:

LayoutTests:

Reviewed by Chris Fleizach.

* accessibility/gtk/aria-disabled-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-disabled-changed-notification.html: Added.
* accessibility/gtk/aria-expanded-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-expanded-changed-notification.html: Added.
* accessibility/gtk/aria-pressed-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-pressed-changed-notification.html: Added.
* accessibility/gtk/aria-readonly-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-readonly-changed-notification.html: Added.
* accessibility/gtk/aria-required-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-required-changed-notification.html: Added.


Canonical link: https://commits.webkit.org/193924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222640 268f45cc-cd09-0410-ab3c-d52691b4dbfc