Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp
@@ -77,6 +77,23 @@ gboolean axObjectEventListener(GSignalInvocationHint* signalHint, unsigned numPa
             notificationName = "ActiveStateChanged";
         else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "busy"))
             notificationName = "AXElementBusyChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "enabled"))
+            notificationName = "AXDisabledStateChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "expanded"))
+            notificationName = "AXExpandedChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "pressed"))
+            notificationName = "AXPressedStateChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "read-only"))
+            notificationName = "AXReadOnlyStatusChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "required"))
+            notificationName = "AXRequiredStatusChanged";
+        else if (!g_strcmp0(g_value_get_string(&paramValues[1]), "sensitive"))
+            notificationName = "AXSensitiveStateChanged";
+        else
+            return true;
+        GUniquePtr<char> signalValue(g_strdup_printf("%d", g_value_get_boolean(&paramValues[2])));
+        JSRetainPtr<JSStringRef> jsSignalValue(Adopt, JSStringCreateWithUTF8CString(signalValue.get()));
+        extraArgs.append(JSValueMakeString(jsContext, jsSignalValue.get()));
     } else if (!g_strcmp0(signalQuery.signal_name, "focus-event")) {
         if (g_value_get_boolean(&paramValues[1]))
             notificationName = "AXFocusedUIElementChanged";
